.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Log__e.object
<CustomObject>
    <fields>
        <fullName>INRF__Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Log_Level__c</fullName>
        <label>Log Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Old_Record__c</fullName>
        <label>Old Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Record__c</fullName>
        <label>Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Rule__c</fullName>
        <label>Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rule Log</label>
    <pluralLabel>Rule Logs</pluralLabel>
</CustomObject>